--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -74,7 +74,7 @@ body,
   list-style: none;
   padding: 0;
   margin: 0;
-  display: flex;
+
   margin: 5px 0px;
 }
 
@@ -82,4 +82,8 @@ body,
 .movie .movie__year {
   margin-right: 10px;
   font-size: 14px;
+}
+
+.movie .movie__data {
+  width: 50%;
 }
