--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -3,9 +3,10 @@
   padding: 20px;
   border-radius: 5px;
   background-color: white;
-  margin: 0 auto;
+
   margin-top: 100px;
   max-width: 25%;
+  height: fit-content;
   font-weight: 300;
 }
 
